--- a/Views/ClientePaquetes/Create.cshtml
+++ b/Views/ClientePaquetes/Create.cshtml
@@ -14,11 +14,18 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ID_Cliente" class="control-label"></label>
-                <select asp-for="ID_Cliente" class ="form-control" asp-items="ViewBag.ID_Cliente"></select>
+                <select asp-for="ID_Cliente" class="form-control" asp-items="ViewBag.ID_Cliente"></select>
+                <span asp-validation-for="ID_Cliente" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ID_Paquete" class="control-label"></label>
-                <select asp-for="ID_Paquete" class ="form-control" asp-items="ViewBag.ID_Paquete"></select>
+                <select asp-for="ID_Paquete" class="form-control" asp-items="ViewBag.ID_Paquete"></select>
+                <span asp-validation-for="ID_Paquete" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="fecha_contratacion" class="control-label"></label>
+                <input asp-for="fecha_contratacion" class="form-control" type="date" asp-format="{0:yyyy-MM-dd}" />
+                <span asp-validation-for="fecha_contratacion" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
