--- a/Views/ClientePaquetes/Edit.cshtml
+++ b/Views/ClientePaquetes/Edit.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="fecha_contratacion" class="control-label"></label>
-                <input asp-for="fecha_contratacion" class="form-control" />
+                <input asp-for="fecha_contratacion" class="form-control" type="date" asp-format="{0:yyyy-MM-dd}" />
                 <span asp-validation-for="fecha_contratacion" class="text-danger"></span>
             </div>
             <div class="form-group">
