--- a/Views/Pagos/Create.cshtml
+++ b/Views/Pagos/Create.cshtml
@@ -14,11 +14,17 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ID_ClientePaquete" class="control-label"></label>
-                <select asp-for="ID_ClientePaquete" class ="form-control" asp-items="ViewBag.ID_ClientePaquete"></select>
+                <select asp-for="ID_ClientePaquete" class="form-control" asp-items="ViewBag.ID_ClientePaquete"></select>
+                <span asp-validation-for="ID_ClientePaquete" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="fecha" class="control-label"></label>
+                <input asp-for="fecha" class="form-control" type="date" asp-format="{0:yyyy-MM-dd}" />
+                <span asp-validation-for="fecha" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="monto" class="control-label"></label>
-                <input asp-for="monto" class="form-control" />
+                <input asp-for="monto" class="form-control" type="number" step="0.01" min="0" />
                 <span asp-validation-for="monto" class="text-danger"></span>
             </div>
             <div class="form-group">
