--- a/Views/Pagos/Edit.cshtml
+++ b/Views/Pagos/Edit.cshtml
@@ -20,12 +20,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="fecha" class="control-label"></label>
-                <input asp-for="fecha" class="form-control" />
+                <input asp-for="fecha" class="form-control" type="date" asp-format="{0:yyyy-MM-dd}" />
                 <span asp-validation-for="fecha" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="monto" class="control-label"></label>
-                <input asp-for="monto" class="form-control" />
+                <input asp-for="monto" class="form-control" type="number" step="0.01" min="0" />
                 <span asp-validation-for="monto" class="text-danger"></span>
             </div>
             <div class="form-group">
